@@ -1,4 +1,14 @@
-2003-04-10  mput  <root@mput.dip.jp>
+2003-04-11  mput <root@mput.dip.jp>
+
+	* configure.in: merge FreeBSD port's patch
+	  thanks to Norikatsu Shigemura <nork@ninth-nine.com>
+
+2003-04-11  Saito <timidity@flashmail.com>
+
+	* timidity/resample.c, timidity/playmidi.h:
+	  Fix about bidir loop.
+
+2003-04-10  mput <root@mput.dip.jp>
 
 	* timidity/optcode.h, timidity/optcode.c:
 	  delete repeated #define's
